--- a/src/App.css
+++ b/src/App.css
@@ -129,6 +129,7 @@ body {
 .fullscreen-enabled .react-pdf__Page__svg {
   width: 100% !important;
   height: auto !important;
+  background-color: transparent;
 }
 
 .fullscreen-enabled svg {
